@@ -3,6 +3,8 @@ proiel-webapp. It does not list all changes; see the git history for that.
 
 1.6.0   unreleased
 
+  - Removed raw text importer. The command-line utilities should now be
+    used to preprocess raw text.
   - Removed JSON importer and exporter. This functionality was never
     completed.
   - Added option to write an ID mapping file if importing PROIEL XML with
